<resources>
    <string name="app_name">abazeerapp</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Returns</string>
    <string name="menu_gallery">Orders</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enteryouremail">Enter your email</string>
    <string name="enteryourpass">Enter your password</string>
    <string name="login">Login</string>
    <string name="ordernumber">Order Number</string>
    <string name="customer">Customer</string>
    <string name="representative">Representative</string>
    <string name="wearhouse">Wearhouse</string>
    <string name="status">Status</string>


    <string-array name="operator">
        <item>Complete</item>
        <item>Partially</item>
        <item>Return All</item>
    </string-array>
    <string name="orders">Orders</string>
    <string name="returns">returns</string>
    <string-array name="months">
        <item>اختر الشهر</item>
        <item>January (1)</item>
        <item>February (2)</item>
        <item>March (3)</item>
        <item>April (4)</item>
        <item>May (5)</item>
        <item>June (6)</item>
        <item>July (7)</item>
        <item>August (8)</item>
        <item>September (9)</item>
        <item>October (10)</item>
        <item>November (11)</item>
        <item>December (12)</item>
    </string-array>
    <string-array name="search">
        <item>Product Name</item>
        <item>Quantity</item>
        <item>Barcode</item>
    </string-array>
    <string name="pleaseinventorynewitem">Please Inventory New Item</string>
    <string name="productname_productinfo">Product Name</string>
    <string name="productbarcode">Barcode</string>
    <string name="quantitycheck">Checked Quantity</string>
    <string name="different">Differents</string>
    <string name="expirydate">Expiry Date</string>
    <string name="checkby">Checkd By</string>
    <string name="updatedat">Updated At</string>
    <string name="createdby">Created By</string>
    <string name="createdat">Created At</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="enterurl">Please Enter URL</string>
    <string name="barcodeview">Barcode (View)</string>
    <string name="productname">Product Name (View)</string>
    <string name="lot">Lot Active:</string>
    <string name="selectproduct">Please Select Product</string>
    <string name="quantityinv">Quantity</string>
    <string name="note">Note</string>
    <string name="selectdate">Please Select The Expiry Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zonename">Zone Name:</string>
    <string name="location">enter location name</string>
    <string name="savelocation">Save Location</string>
    <string name="inventory">Inventory</string>
</resources>