<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abazeer.abazeerapp.ui.returnshow.ReturnShow"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abazeer.abazeerapp.ui.ordershow.OrderShow"
        android:label="@string/menu_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.abazeer.abazeerapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.abazeer.abazeerapp.ui.inventory.InventoryFragment"
        android:label="fragment_inventory"
        tools:layout="@layout/fragment_inventory" />
</navigation>