<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectproduct"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addpage_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcodeview"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addpage_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pleaseinventorynewitem" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addpage_productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pleaseinventorynewitem" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/lot"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/addpage_chdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addpage_layoutdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectdate"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/addpage_spexistdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/addpage_layoutdatee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/addpage_spday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/addpage_spmonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/addpage_spyear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/addpage_quantityin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/quantityinv"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/addpage_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/addpage_btnsave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>