<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReturnItemShow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="Name" />

        <TextView
            android:id="@+id/returnitem_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/customer" />

        <TextView
            android:id="@+id/returnitem_cname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/representative" />

        <TextView
            android:id="@+id/returnitem_repname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/wearhouse" />

        <TextView
            android:id="@+id/returnitem_warename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="TextView" />

        <TextView
            android:id="@+id/returnitem_pcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="الاصناف"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="product name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ExDate"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="QtyV"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="QtyD"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="QtyEx"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Total"
            android:textAlignment="center" />
    </TableRow>

    <TableLayout
        android:id="@+id/returnitem_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>